minor fixes, styled inputs to fix zooming on ios

--- a/global.css
+++ b/global.css
@@ -67,3 +67,7 @@ i {
 	background-color: #e8e8e8;
 	border-color: #aaaaaa;
 }
+
+input {
+	font-size: 16px !important;
+}
