--- a/src/messages/message/message.module.css
+++ b/src/messages/message/message.module.css
@@ -151,7 +151,6 @@
 	border-radius: 25px;
 	border: 1px solid #eaeaea;
 	background-color: rgba(244, 244, 244, 0.6);
-	font-size: 15px;
 	outline: none;
 	transition:
 		border-color 0.2s ease,
